create player + add author to rules
